EES-4754 fix page mode bar covering ckeditor toolbar

--- a/src/explore-education-statistics-admin/src/components/editable/EditablePageModeToggle.module.scss
+++ b/src/explore-education-statistics-admin/src/components/editable/EditablePageModeToggle.module.scss
@@ -19,10 +19,9 @@
   position: sticky;
   top: 0;
   width: calc(100% + #{govuk-spacing(6)});
-  z-index: 999;
+  z-index: 9999; // z-index has to be higher than ckeditor sticky toolbar.
 
   @include govuk-media-query($from: tablet) {
-    margin-bottom: govuk-spacing(9);
     margin-left: 0;
     width: 100%;
   }
